updated up to instance 6

--- a/src/report4/report4.tex
+++ b/src/report4/report4.tex
@@ -214,17 +214,17 @@ cannot report averages and standard deviations of our results.
 \begin{table}[!H]
 \scriptsize
 \centering
-\begin{tabular}{llcccccc}
+\begin{tabular}{cccccccc}
 \toprule
  & & & \multicolumn{3}{c}{Crossings} & \multicolumn{2}{c}{Time} \\
 Instance & Ants & Runs & avg & min & sd & avg & sd \\
 \midrule
-\texttt{auto-1} & & & 14.87 & 14 & 0.35 & 61.08 & 0.58  \\
-\texttt{auto-2} & & & 0 & 1.13 & 0.83 & 54.00 & 0.59 \\
-\texttt{auto-3} & & & 171 & 179.87 & 4.19 & 4.58 & 0.5 \\
-\texttt{auto-4} & & & 2 & 4.00 & 1.19 & 72.89 & 1.94 \\
-\texttt{auto-5} & & & 22 & 30.25 & 3.69 & 47.75 & 1.15 \\
-\texttt{auto-6}& & & & & & & \\
+\texttt{auto-1} & 10,000 & 50 & 14.87 & 14 & 0.35 & 61.08 & 0.58  \\
+\texttt{auto-2} & 10,000 & 50 & 0 & 1.13 & 0.83 & 54.00 & 0.59 \\
+\texttt{auto-3} & 3,000  & 40 & 171 & 179.87 & 4.19 & 4.58 & 0.5 \\
+\texttt{auto-4} & 10,000 & 40 & 2 & 4.00 & 1.19 & 72.89 & 1.94 \\
+\texttt{auto-5} & 5,000 & 40 & 22 & 30.25 & 3.69 & 47.75 & 1.15 \\
+\texttt{auto-6} & 10 & 2 & 8 Mio. & 8 Mio. & 1,810 & 111 & 2.46 \\
 \texttt{auto-7}& & & & & & & \\
 \texttt{auto-8}& & & & & & & \\
 \texttt{auto-9}& & & & & & & \\
