updated report 4. includes all results

--- a/src/report4/report4.tex
+++ b/src/report4/report4.tex
@@ -225,14 +225,18 @@ Instance & Ants & Runs & avg & min & sd & avg & sd \\
 \texttt{auto-4} & 10,000 & 40 & 2 & 4.00 & 1.19 & 72.89 & 1.94 \\
 \texttt{auto-5} & 5,000 & 40 & 22 & 30.25 & 3.69 & 47.75 & 1.15 \\
 \texttt{auto-6} & 10 & 2 & 8 Mio. & 8 Mio. & 1,810 & 111 & 2.46 \\
-\texttt{auto-7}& & & & & & & \\
-\texttt{auto-8}& & & & & & & \\
-\texttt{auto-9}& & & & & & & \\
-\texttt{auto-10}& & & & & & & \\
+\texttt{auto-7} & 100 & 5 & 39,029 & 41,060 & 1,166 & 99.34 & 9.36 \\
+\texttt{auto-8} & 100 & 5 & 1 Mio. & 1 Mio.  & 4,563 & 318.35 & 7.36 \\
+\texttt{auto-9} & 20 & 5 & 1.4 Mio. & 1.47 Mio. & 34,775 & 149.38 & 4.19 \\
+\texttt{auto-10} & 100 & 5 & 168,979 & 170,761 & 1,173.43 & 157.37 & 11.51 \\
 \bottomrule
 
 \end{tabular}
-
+\caption{This table shows the crossing numbers and timings for all
+  instances. We report the number of ants and the number of runs as
+  these are vary across instances. We used $\alpha=2$, $\beta=2$ and a
+  pheromone decay rate of $0.4$ for all runs.}
+\label{tab:results}
 \end{table}
 
 \clearpage
