--- a/src/report5_6/report5_6.tex
+++ b/src/report5_6/report5_6.tex
@@ -132,5 +132,22 @@ We run a set of experiments to find out how the different parameters
 number runs and the size of our ant colony influence to results of our
 optimization. \\
 
+\begin{table}
+\begin{tabular}{lccccc}
+  \toprule  & min & avg & sd & avgTime & sdTime \\ 
+  \midrule automatic-1.txt & 9 / 12 & 9.63 / 12.38 & 0.52 / 0.52 & 440.50 / 76.85 & 1.76 / 1.22 \\ 
+  automatic-2.txt & 0 / 0 & 0 / 0  & 0 / 0 & 417.71 / 65.32 & 1.34 / 1.23 \\ 
+  automatic-3.txt & 62 / 90 & 62.25 / 97.25 & 2.66 / 3.38 & 897.17 / 456.36 & 10.47 / 7.59 \\ 
+  automatic-4.txt & 0 / 1 & 0 / 1.26 & 0 / 0.35 & 437.36 / 91.40 & 3.11 / 1.89 \\ 
+  automatic-5.txt &  &  &  &  & \\ 
+  automatic-6.txt &  &  &  &  & \\ 
+  automatic-7.txt &  &  &  &  & \\ 
+  automatic-8.txt &  &  &  &  & \\ 
+  automatic-9.txt &  &  &  &  & \\ 
+  automatic-10.txt & &  &  &  & \\ 
+  \bottomrule 
+\end{tabular}
+\caption{Crossings. We report numbers with local and without local search}
+\end{table}
 
 \end{document}
