results for the rest of the instances

--- a/src/report5_6/report5_6.tex
+++ b/src/report5_6/report5_6.tex
@@ -139,12 +139,12 @@ optimization. \\
   automatic-2.txt & 0 / 0 & 0 / 0  & 0 / 0 & 417.71 / 65.32 & 1.34 / 1.23 \\ 
   automatic-3.txt & 62 / 90 & 62.25 / 97.25 & 2.66 / 3.38 & 897.17 / 456.36 & 10.47 / 7.59 \\ 
   automatic-4.txt & 0 / 1 & 0 / 1.26 & 0 / 0.35 & 437.36 / 91.40 & 3.11 / 1.89 \\ 
-  automatic-5.txt &  &  &  &  & \\ 
-  automatic-6.txt &  &  &  &  & \\ 
-  automatic-7.txt &  &  &  &  & \\ 
-  automatic-8.txt &  &  &  &  & \\ 
-  automatic-9.txt &  &  &  &  & \\ 
-  automatic-10.txt & &  &  &  & \\ 
+  automatic-5.txt & 1 / 8 & 3.13 / 10.38 & 1.13 / 1.41 & 379.32 / 63.09 & 1.29 / 1.23 \\ 
+  automatic-6.txt & 7,405,217 / 7,429,527 & 7,439,179 / 7,444,068 & 15,364 / 6,993 & 384.78 / 122.592 & 2.77 / 1.87 \\ 
+  automatic-7.txt & 26,234 / 25,169 & 28,773 / 28,234 & 1,412 / 2,009 & 279.07 / 165.43 & 1.87 / 3.06 \\ 
+  automatic-8.txt & 1,048,980 / 1,049,749 & 1,050,587 / 1,051,231  & 1,336 / 1,204 & 659.92 / 443.03 & 4.40 / 4.26 \\ 
+  automatic-9.txt & 496,609 / 537,739 & 544,469 / 554,541 & 21,315 / 8,703 & 575.54 / 212.58 & 9.86 / 17.79 \\ 
+  automatic-10.txt & 117,012 / 119,429 & 119,520 / 120,212 & 1,117 / 391 & 498.60 / 232.95 & 2.97 / 2.65 \\ 
   \bottomrule 
 \end{tabular}
 \caption{Crossings. We report numbers with local and without local search}
