changed script size of table

--- a/src/report5_6/report5_6.tex
+++ b/src/report5_6/report5_6.tex
@@ -133,6 +133,7 @@ number runs and the size of our ant colony influence to results of our
 optimization. \\
 
 \begin{table}
+\scriptsize
 \begin{tabular}{lccccc}
   \toprule  & min & avg & sd & avgTime & sdTime \\ 
   \midrule automatic-1.txt & 9 / 12 & 9.63 / 12.38 & 0.52 / 0.52 & 440.50 / 76.85 & 1.76 / 1.22 \\ 
