added assignment clarification

--- a/src/report5_6/report5_6.tex
+++ b/src/report5_6/report5_6.tex
@@ -196,7 +196,7 @@ number minimization problem.
 \end{table}
 
 \subsection{Parameter tuning}
-In exercise, we tuned the parameter of the ACO used in the previous assignment. In order to be able to validate
+In this exercise, we tuned the parameter of the ACO used in assignment 4. In order to be able to validate
 the tuned parameters out-of-sample we generated a set of 40 random tuning instances. In order to be able to use
 a reasonable number of ants we decided to simulate reasonably small graphs. 
 
